--- a/src/css/artis.css
+++ b/src/css/artis.css
@@ -1,204 +1,328 @@
-*{
+/*-----------------------------------*\
+  #CUSTOM PROPERTY
+\*-----------------------------------*/
+
+:root {
+    --main-color: #d3ad7f;
+    --background-color: #000207;
+    --text-color: #fff;
+    --card-first-color: #232323;
+    --card-second-color: #4f4f4f;
+    --header-border-color: rgba(255, 255, 255, 0.2);
+    --navbar-link-color: rgba(255, 255, 255, 0.6);
+    --icon-color: rgba(255, 255, 255, 0.5);
+    --search-border-color: rgba(255, 255, 255, 0.5);
+    --search-background-color: rgba(255, 255, 255, 0.1);
+    --contact-background-color: #212121;
+    --load-more-color: #d39c51;
+  
+    --ff-poppins: "Poppins", sans-serif;
+  
+    --transition-1: 0.25s ease;
+    --transition-2: 0.5s ease-in-out;
+  }
+  
+  /*-----------------------------------*\
+    #RESET
+  \*-----------------------------------*/
+  
+  *, *::before, *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
-    background: hsl(0, 0%, 7%);
-}
-
-.container{
-    height: 100%;
-    display:flex;
-    justify-content: center;
-}
-main {
-    top: 30px;
-    position: fixed;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr  ;
-    grid-template-rows: 1fr 1fr 1fr 1fr ;
-    margin-bottom: 75px;
-    flex-wrap: wrap;
-    width: 70%;
-    height: 90vh;
-    color: aliceblue;
-    display: grid;
-    align-items: center;
-}
+  }
   
-aside.sidebar {
-    grid-column-start: 1;
-    height: 92vh;
-    width: 235px;
-    background: #303031;
-    outline: 1px solid #373737;
-    border-radius: 19px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    /* padding: 80px; */
-    margin: 0 16px;
-}
-
-.main-content {
-    background: #303031;
-    width: 100%;
-    height: 100%;
-    grid-column-start: 2;
-    grid-column-end: 6;
-    border-radius: 19px;
-    overflow: auto;
-    min-width: 500px;
-
-}
-
-.card-img {
-    width: 100px;
-    height: 100px;
-    border-radius: 20px;
-    border: 1px solid violet;
-    margin: 96px 0px 23px 0;
-}
-h4.About {
-    font-size: 35px;
-    font-weight: 900;
-    padding: 47px 15px 0 44px;
-}
-
-span.prog {
-    height: 6px;
+  a { text-decoration: none; }
+  
+  img, ion-icon, a, button, time, span { display: block; }
+  
+  button {
+    font: inherit;
+    background: none;
+    border: none;
+    text-align: left;
+    cursor: pointer;
+  }
+  header {
+    color: var(--text-color);
+  }
+  
+  input, textarea {
     display: block;
-    font-size: 40px;
-    position: relative;
-    background: #FDC663;
-    width: 40px;
-    border-radius: 10px;
-    margin: 18px 0 0 39px;
-}
-
-.content {
-    justify-content: space-between;
-    display: flex;
-}
-.navigation  ul {
-    display: flex;
-    list-style: none;
-    align-items: center;
-
-}
-li, a{
-    color: #FDC663;
-    padding: 10px;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 900;
-}
-.navigation {
-    display: flex;
-    background: #282829;
-    height: 71px;
-    padding: 0 71px;
-    border-bottom-left-radius: 15px;
-    border-top-right-radius: 15px;
-    outline: 1px solid #373737 ;
-}
-.Members {
     width: 100%;
-    height: 55vh;
+    background: none;
+    font: inherit;
+  }
+  
+  ::selection {
+    background: var(--load-more-color);
+    color: var(--background-color);
+  }
+  
+  html { font-family: var(--ff-poppins); }
+  
+  body {
+      font-family: 'Roboto', 'Open Sans', 'Helvetica', Arial, sans-serif;
+     background: var(--background-color);
+     width: 100%;
+     height: 100vh;
+     display: flex;
+    justify-content: center;
+    align-items: center;  
+  }
+
+  /* .container{
     display: flex;
     justify-content: center;
-    padding: 46px 1px 0px 38px;
-}
-.nav {
-    justify-content: right;
-    display: flex;
+    align-items: center;  
+  }
+    
+  */
+  main{
     width: 100%;
-    min-width: 500px;
+    height: 75%;
+  } 
+  
+  li { list-style: none; }
+  
+  /*-----------------------------------*\
+    #REUSED STYLE
+  \*-----------------------------------*/
+  
+  .sidebar, article {
+    background: var(--card-first-color);
+    border: 1px solid var(--search-border-color);
+    border-radius: 20px;
+    padding: 15px;
+  }
+  
+  .separator {
+    width: 100%;
+    height: 1px;
+    background: var(--search-border-color);
+    margin: 16px 0;
+  }
+  
+  /*-----------------------------------*\
+    #SIDEBAR
+  \*-----------------------------------*/
+  aside.sidebar {
+    width: 17%;
 }
-p {
-    line-height: 2;
-    font-size: 20px;
+  .sidebar.active { max-height: 405px; }
+img{
+    border-radius: 10px;
+  }
+  .sidebar-info {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 15px;
+    padding: 10px;
+  }
+  
+  .info-content .name {
+    color: var(--text-color);
+    font-size: 26px;
+    font-weight: 900;
+    margin-bottom: 10px;
+  }
+  
+  .info-content .title {
+    color: var(--text-color);
+    margin: auto;
+    background: var(--card-second-color);
+    font-size: 15px;
+    font-weight: 700;
+    width: max-content;
+    padding: 3px 15px;
+    border-radius: 8px;
+  }
+  
+  .contacts-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 16px;
+    padding: 10px;
+  }
+  
+  .contact-title {
+    color: hsla(0, 0%, 84%, 0.7);
+    font-size: 15px;
+    text-transform: uppercase;
+    margin-bottom: 2px;
+    line-height: 20px;
+  }
+  
+  .contact-info {
+    color: var(--text-color);
+    font-size: 15px;
+    line-height: 18px;
+    font-family: "Poppins";
+  }
+  
+  /*-----------------------------------*\
+    #NAVBAR
+  \*-----------------------------------*/
+  
+  .navbar-list {
+    display: flex;
+    color: hsla(0, 0%, 84%, 0.7);
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10px;
+  }
+  
+  .navbar-link {
+    color: var(--light-gray);
+    font-size: var(--fs-8);
+    padding: 20px 7px;
+    transition: color var(--transition-1);
+
+  }
+  
+  .navbar-link:hover,
+  .navbar-link:focus { color: var(--light-gray-70); }
+  
+  .navbar-link.active { color: var(--orange-yellow-crayola); }
+  
+  /*-----------------------------------*\
+    #ABOUT
+  \*-----------------------------------*/
+  
+  .about .article-title { margin-bottom: 15px; }
+  
+  .about-text {
+    color: var(--text-color);
+    font-size: var(--fs-6);
+    font-weight: var(--fw-300);
+    line-height: 1.6;
+  }
+  
+  /*-----------------------------------*\
+    #RESPONSIVE
+  \*-----------------------------------*/
+  
+  @media (min-width: 450px) {
+    .clients-item { min-width: calc(33.33% - 10px); }
+  
+    .project-img,
+    .blog-banner-box { height: auto; }
+  }
+  
+  @media (min-width: 580px) {
+    .navbar {
+      position: absolute;
+      bottom: auto;
+      top: 0;
+      left: auto;
+      right: 0;
+      width: max-content;
+      border-radius: 0 20px;
+      padding: 0 20px;
+      box-shadow: none;
+      background: hsla(240, 1%, 17%, 0.75);
+      backdrop-filter: blur(10px);
+      border: 1px solid var(--card-second-color);
+    }
+  
+    .navbar-list {
+      gap: 30px;
+      padding: 0 20px;
+    }
+  
+    .navbar-link { font-weight: var(--fw-500); }
+  
+    .service-list {
+      grid-template-columns: 1fr 1fr;
+      gap: 20px 25px;
+    }
+  
+    .testimonials-item { min-width: calc(50% - 15px); }
+  
+    .clients-item { min-width: calc(25% - 38px); }
+  
+    .project-list { grid-template-columns: repeat(3, 1fr); }
+  
+    .blog-banner-box { height: 230px; }
+  
+    body::-webkit-scrollbar { width: 20px; }
+  
+    body::-webkit-scrollbar-track { background: var(--smoky-black); }
+  
+    body::-webkit-scrollbar-thumb {
+      border: 5px solid var(--smoky-black);
+      background: hsla(0, 0%, 100%, 0.1);
+      border-radius: 20px;
+      box-shadow: inset 1px 1px 0 hsla(0, 0%, 100%, 0.11),
+                  inset -1px -1px 0 hsla(0, 0%, 100%, 0.11);
+    }
+  
+    body::-webkit-scrollbar-thumb:hover { background: hsla(0, 0%, 100%, 0.15); }
+  
+    body::-webkit-scrollbar-button { height: 60px; }
+  
+    .sidebar,
+    article { width: auto; }
+  
+    article { min-height: 100%; }
+  
+    main {
+      max-width: 1200px;
+      margin-inline: auto;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      gap: 25px;
+    }
+  
+    .main-content {
+      min-width: 75%;
+      width: 75%;
+      margin: 0;
+      position: relative;
+    }
+  
+    .sidebar {
+      max-height: max-content;
+      margin-bottom: 0;
+      padding-top: 60px;
+      overflow: hidden;
+    }
+  
+    .avatar-box img { width: 150px; }
+  
+    .info_more-btn { display: none; }
+  
+    .contact-info :is(.contact-link) {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  
+    .contact-info :is(.contact-link, time, address) {
+      --fs-7: 14px;
+      font-weight: var(--fw-300);
+    }
+  
+    .social-list { justify-content: center; }
+  
+    .timeline-text { max-width: 700px; }
+  }
+
+  .navbar-link.active {
+    background-color: #555;
 }
 
-.contents {
+.contact-artists {
     display: none;
 }
+
 .visible{
+  display: block;
+}
+
+.contact-artists.active {
     display: block;
 }
-h3.title {
-    font-size: 35px;
-    font-weight: 900;
-    padding: 47px 15px 0 44px;
-}
-.datesLocations {
-    display: flex;
-    flex-direction: column;
-    font-size: 35px;
-    font-weight: 900;
-    padding: 32px 19px 0 60px;
-}
-li{
-    list-style: none;
-}
-.location{
-    text-decoration: none;
-    list-style: none;
-    color: white;
-}
-.span{
-    font-size: 14px;
-    color: #FDC663;
-}
-
-.timeline-item {
-    position: relative;
-    padding-left: 30px;
-    margin-bottom: 20px;
-}
-.timeline-item::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 5px;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #FDC663;
-    box-shadow: 0 0 10px rgba(326, 235, 166, 13.5);
-
-}
-.timeline-item::after {
-    content: '';
-    position: absolute;
-    left: 5px;
-    top: 20px;
-    bottom: -20px;
-    width: 2px;
-    background-color: #f9f9f9;
-}
-.timeline-item:last-child::after {
-    display: none;
-}
-.institution {
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #FDC663;
-}
-.year {
-    font-size: 0.9em;
-    margin-bottom: 5px;
-    color: #cccccc;
-}
-::-webkit-scrollbar {
-    width: 0px;
-    background-color: transparent; 
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.3);
-    border-radius: 6px;
-}
-
